[jayesh tapdiya] udpated the dasboard html file for updating the icons

--- a/pages/dashborad.html
+++ b/pages/dashborad.html
@@ -34,7 +34,7 @@
 
             </div>
             <div class="detailbutton">
-                <button>Search</button>
+                <button><i class="fa-solid fa-magnifying-glass" style="color: black;"></i></button>
                 <button>+ Add user</button>
             </div>
         </div>
