--- a/pages/form.html
+++ b/pages/form.html
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <button type="button" class="cancel">Cancel</button>
+                    <button type="button" id="cancel" class="cancel">Cancel</button>
                     <div>
                         <button type="submit" class="submit">Submit</button>
                         <button type="reset" class="reset">Reset</button>
