[jayesh tapdiya] updated the dashboardd.html file according to the dashboard.js file

--- a/pages/dashborad.html
+++ b/pages/dashborad.html
@@ -8,14 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+    <script src="../script/dashboard.js"></script>
     <link rel="stylesheet" href="../style/dashboard.css">
 
 </head>
 
 <body>
 
-    <div class="maincontainer">
+    <div class="maincontainer" id="maincontainer">
 
         <!-- header start here -->
         <div class="header">
@@ -61,40 +61,8 @@
                         </tr>
                     </thead>
                     <tbody id="emp-data">
-                        <tr>
-                            <td><img src="" alt="logo of the emp"> Mark</td>
-                            <td>male</td>
-                            <td>
-                                <div class="departments">
-                                    <p class="department">@hrs</p>
-                                    <p class="department">@hrs</p>
-                                    <p class="department">@hrs</p>
-                                    <p class="department">@hrs</p>
-                                    <p class="department">@hrs</p>
-                                </div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-indian-rupee-sign"> </i>25000
-                            </td>
-                            <td>2/2/2025</td>
-                            <td>
-                                <div class="tdbutton">
-                                    <i class="fa-solid fa-trash"></i>
-                                    <i class="fa-sharp fa-solid fa-pencil"></i>
-                                </div>
-                            </td>
 
-                        </tr>
-                        <tr>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>@social</td>
-                        </tr>
+
                     </tbody>
                 </table>
             </div>
