[jayesh tapdiya] udapted the form .html file for updating the form fields

--- a/pages/form.html
+++ b/pages/form.html
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="value">
-                        <input type="text" name="name" id="name" value="name" placeholder="Enter name" />
+                        <input type="text" name="name" id="name" placeholder="Enter name" />
                         <div class="profile-images">
                             <label><input type="radio" name="profile" value="../assests/img1.png"><img
                                     src="../assests/img1.png" alt=""></label>
@@ -70,7 +70,7 @@
                         <div class="date-select">
 
                             <select name="date" id="date">
-                                <option value="day">select the data</option>
+                                <option value="day">select the date</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
