[jayesh tapdiya] udapted the dashboard.html file for adding the search functionlity

--- a/pages/dashborad.html
+++ b/pages/dashborad.html
@@ -38,7 +38,8 @@
 
             </div>
             <div class="detailbutton">
-                <button><i class="fa-solid fa-magnifying-glass" style="color: black;"></i></button>
+                <!-- <button><i class="fa-solid fa-magnifying-glass" style="color: black;"></i></button> -->
+                <input type="text" id="search" placeholder="search by name">
                 <a href="../pages/form.html" style="text-decoration: none;"> <button
                         style="background-color: #82A70C;">+
                         Add user</button></a>
