--- a/pages/dashborad.html
+++ b/pages/dashborad.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="../script/dashboard.js"></script>
     <link rel="stylesheet" href="../style/dashboard.css">
+    <!-- jquery cdn  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 
 </head>
 
@@ -39,7 +42,7 @@
             </div>
             <div class="detailbutton">
                 <!-- <button><i class="fa-solid fa-magnifying-glass" style="color: black;"></i></button> -->
-                <input type="text" id="search" placeholder="search by name">
+                <input type="text" id="search" placeholder="search ">
                 <a href="../pages/form.html" style="text-decoration: none;"> <button
                         style="background-color: #82A70C;">+
                         Add user</button></a>
