--- a/pages/dashborad.html
+++ b/pages/dashborad.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empolyee Payroll</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        integrity="shsalarybydsc38salary by dsc-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../style/dashboard.css">
     <!-- jquery cdn  -->
@@ -42,10 +43,17 @@
             </div>
             <div class="detailbutton">
                 <!-- <button><i class="fa-solid fa-magnifying-glass" style="color: black;"></i></button> -->
-                <input type="text" id="search" placeholder="search ">
+                <input type="text" id="search" placeholder="search " class="sortting">
                 <a href="../pages/form.html" style="text-decoration: none;"> <button
                         style="background-color: #82A70C;">+
                         Add user</button></a>
+                <select name="sorting" id="sorting" class="sortting">
+                    <option value="">select the sorting</option>
+                    <option value="namebyasc">asc by name</option>
+                    <option value="namebydsc">dsc by name</option>
+                    <option value="salarybyasc">salary by asc</option>
+                    <option value="salarybydsc">salary by dsc</option>
+                </select>
             </div>
         </div>
 
