--- a/pages/form.html
+++ b/pages/form.html
@@ -160,9 +160,9 @@
                 </div>
                 <div class="buttons">
                     <button type="button" id="cancel" class="cancel">Cancel</button>
-                    <div>
-                        <button type="submit" class="submit">Submit</button>
-                        <button type="reset" class="reset">Reset</button>
+                    <div id="buttonup">
+                        <!-- <button type="submit" class="submit">Submit</button>
+                        <button type="reset" class="reset">Reset</button> -->
                     </div>
                 </div>
         </div>
